--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -33,7 +33,7 @@
                             <label for="fruits">Default Sorting:</label>
                             <select id="fruits" name="fruitlist" class="border-0 form-select-sm bg-light me-3" form="fruitform">
                                 <option value="volvo">Nothing</option>
-                                <option value="saab">Available</option>
+                                <option value="saab">On Sale</option>
                                 <option value="opel">Auction</option>
                                 <option value="audi">Sold</option>
                             </select>
@@ -69,23 +69,6 @@
                                     <output id="amount" name="amount" min-velue="0" max-value="10000000" for="rangeInput">0</output>
                                 </div>
                             </div>
-                            @* <div class="col-lg-12">
-                                <div class="mb-3">
-                                    <h4>Additional</h4>
-                                    <div class="mb-2">
-                                        <input type="radio" class="me-2" id="Categories-3" name="Categories-1" value="Beverages">
-                                        <label for="Categories-3"> Sales</label>
-                                    </div>
-                                    <div class="mb-2">
-                                        <input type="radio" class="me-2" id="Categories-4" name="Categories-1" value="Beverages">
-                                        <label for="Categories-4"> Discount</label>
-                                    </div>
-                                    <div class="mb-2">
-                                        <input type="radio" class="me-2" id="Categories-5" name="Categories-1" value="Beverages">
-                                        <label for="Categories-5"> Expired</label>
-                                    </div>
-                                </div>
-                            </div> *@
                         </div>
                     </div>
                     <div class="col-lg-9">
@@ -111,8 +94,7 @@
                                                     {
                                                         <p class="text-dark fs-5 fw-bold mb-0">@artwork.Price</p>
                                                     }                                                    
-@*                                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
- *@                                                </div>
+                                                 </div>
                                             </div>
                                         </div>
                                     </div>
