--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -1,6 +1,13 @@
 ﻿
+@inject ArtGallery.Services.CartService _cartService
 @{
     ViewData["Title"] = "_UserLayout";
+    var accountId = User.Claims.FirstOrDefault(c => c.Type == "AccountId")?.Value;
+    var cartItemCount = 0;
+    if (accountId != null)
+    {
+        cartItemCount = await _cartService.GetCartCount(int.Parse(accountId));
+    }
 }
 
 <!DOCTYPE html>
@@ -67,7 +74,7 @@
                         <a asp-controller="Home" asp-action="Index" class="nav-item nav-link active">Home</a>
                         <a asp-controller="Artwork" asp-action="Index" class="nav-item nav-link">Artworks</a>
                         <a asp-controller="Auction" asp-action="Index" class="nav-item nav-link">Auction</a>
-                        <div class="nav-item dropdown">
+                        @* <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
                                 <a asp-controller="Cart" asp-action="Index" class="dropdown-item">Cart</a>
@@ -75,18 +82,24 @@
                                 <a asp-controller="UI" asp-action="Testimonial" class="dropdown-item">Testimonial</a>
                                 <a asp-controller="UI" asp-action="Page404" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> *@
                         <a asp-controller="Exhibition" asp-action="Index" class="nav-item nav-link">Exhibition</a>
                     </div>
                     <div class="d-flex m-3 me-0">
                         <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                        <a href="#" class="position-relative me-4 my-auto">
+                        <a asp-controller="Cart" asp-action="Index" class="position-relative me-4 my-auto">
                             <i class="fa fa-shopping-bag fa-2x"></i>
-                            <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
+                            <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">@cartItemCount</span>
                         </a>
-                        <a href="#" class="my-auto">
-                            <i class="fas fa-user fa-2x"></i>
-                        </a>
+                        <div class="dropdown my-auto">
+                            <a href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user fa-2x"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                                <li><a class="dropdown-item" href="/profile">Profile</a></li>
+                                <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -131,7 +144,7 @@
                     <div class="col-lg-6">
                         <div class="position-relative mx-auto">
                             <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
-                            <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
+                            <button type="submit" class="btn btn-primary border-0 border-secondary w-auto py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -209,7 +222,7 @@
     </div>
     <!-- Copyright End -->
     <!-- Back to Top -->
-    <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
+    @* <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a> *@
 
 
     <!-- JavaScript Libraries -->
