--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -21,56 +21,46 @@
         <div class="row g-4">
             <div class="col-lg-12">
                 <div class="row g-4">
-                    <div class="col-xl-3">
-                        <div class="input-group w-100 mx-auto d-flex">
-                            <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
-                            <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
-                        </div>
-                    </div>
-                    <div class="col-6"></div>
-                    <div class="col-xl-3">
-                        <div class="bg-light ps-3 py-3 rounded d-flex justify-content-between mb-4">
-                            <label for="fruits">Default Sorting:</label>
-                            <select id="fruits" name="fruitlist" class="border-0 form-select-sm bg-light me-3" form="fruitform">
-                                <option value="volvo">Nothing</option>
-                                <option value="saab">On Sale</option>
-                                <option value="opel">Auction</option>
-                                <option value="audi">Sold</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3">
+                    <form id="searchForm" class="col-lg-3">
                         <div class="row g-4">
+                            <div class="col-lg-12">
+                                <div class="input-group w-100 mx-auto d-flex">
+                                    <input type="search" name="title" class="form-control p-3" placeholder="Enter title..." aria-describedby="search-icon-1" value="@Context.Request.Query["title"]">
+                                    <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
+                                </div>
+                            </div>
                             <div class="col-lg-12">
                                 <div class="mb-3">
                                     <h4>Categories</h4>
-                                    <ul class="list-unstyled">
-                                        <li>
-                                            <div class="d-flex justify-content-between">
-                                                <a href="#"><i class="fas fa-apple-alt me-2"></i>For Sale</a>
-                                                <span>(3)</span>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="d-flex justify-content-between">
-                                                <a href="#"><i class="fas fa-apple-alt me-2"></i>Auction</a>
-                                                <span>(5)</span>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                    @foreach (var category in Enum.GetValues(typeof(Category)).Cast<Category>())
+                                    {
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" name="categories" value="@category" @(Context.Request.Query["categories"].Contains(category.ToString()) ? "checked" : "")>
+                                            <label class="form-check-label">@category</label>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="mb-3">
                                     <h4 class="mb-2">Price</h4>
-                                    <input type="range" class="form-range w-100" id="rangeInput" name="rangeInput" min="0" max="10000000" value="0" oninput="amount.value=rangeInput.value">
-                                    <output id="amount" name="amount" min-velue="0" max-value="10000000" for="rangeInput">0</output>
+                                    <h6 class="mb-2">Min</h6>
+                                    <input type="range" class="form-range w-100" id="minPrice" name="minPrice" min="0" max="10000" value=@Context.Request.Query["minPrice"] oninput="amountMin.value=minPrice.value">
+                                    <output id="amountMin" name="amountMin" min-velue="0" max-value="10000" for="minPrice">@Context.Request.Query["minPrice"]</output>
+                                    <h6 class="mb-2">Max</h6>
+                                    <input type="range" class="form-range w-100" id="maxPrice" name="maxPrice" min="0" max="10000" value=@Context.Request.Query["maxPrice"] oninput="amountMax.value=maxPrice.value">
+                                    <output id="amountMax" name="amountMax" min-velue="0" max-value="10000" for="maxPrice">@Context.Request.Query["maxPrice"]</output>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12">
+                                <div class="mb-3">
+                                    <h4 class="mb-2">Artist Name</h4>
+                                    <input type="text" id="artistName" name="artistName" class="form-control" placeholder="Enter artist name..." value="@Context.Request.Query["artistName"]" />
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                     <div class="col-lg-9">
                         <div class="row g-4 justify-content-center">
                             @if (Model != null && Model.Any())
@@ -108,3 +98,16 @@
     </div>
 </div>
 
+
+@section Scripts {
+    <script>
+        document.querySelectorAll('#searchForm input').forEach(element => {
+            element.addEventListener('change', () => {
+                let params = new URLSearchParams(new FormData(document.getElementById('searchForm')));
+                let newUrl = `${window.location.pathname}?${params.toString()}`;
+                window.history.pushState({}, '', newUrl);
+                window.location.href = newUrl;
+            });
+        });
+    </script>
+}
