--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -235,6 +235,8 @@
 
     <!-- Template Javascript -->
     <script src="~/UI/js/main.js"></script>
+    @RenderSection("Scripts", required: false)
+
 </body>
 
 </html>
