--- a/ArtGallery/Views/Account/Register.cshtml
+++ b/ArtGallery/Views/Account/Register.cshtml
@@ -36,7 +36,9 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    <div class="col-lg-5 d-none d-lg-block bg-register-image">
+                        <img src="/Img/Online gallery-amico.png" alt="Alternate Text" class="img-thumbnail" />
+                    </div>
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
