--- a/ArtGallery/Views/Artwork/Admin.cshtml
+++ b/ArtGallery/Views/Artwork/Admin.cshtml
@@ -20,7 +20,7 @@
             <th>Category</th>
             <th>Status</th>
             <th>Price</th>
-            <th></th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -36,9 +36,6 @@
                 <td>
                     <a href="@Url.Action("Edit", new { id = item.ArtworkId })" class="btn btn-warning">
                         <i class="fas fa-edit"></i>
-                    </a>
-                    <a href="@Url.Action("Details", new { id = item.ArtworkId })" class="btn btn-info">
-                        <i class="fas fa-info-circle"></i>
                     </a>
                     <a href="@Url.Action("Delete", new { id = item.ArtworkId })" class="btn btn-danger">
                         <i class="fas fa-trash"></i>
