--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -84,8 +84,12 @@
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                                @* <li><a class="dropdown-item" href="/profile">Profile</a></li> *@
-                                <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                               
+                                <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">
+                                        <i class="bi bi-box-arrow-right"></i>
+                                        Logout
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
