--- a/ArtGallery/Views/Artwork/Create.cshtml
+++ b/ArtGallery/Views/Artwork/Create.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@using System.Security.Claims
+@{
     ViewData["title"] = "Create Artwork";
     Layout = "_Layout";
     var artists = ViewBag.Artist;
     var exhibitions = ViewBag.Exhibition;
+    var role = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Role)?.Value;
+
 }
 
 @model ArtGallery.Models.ArtworkCreate
@@ -55,16 +58,19 @@
         <label asp-for="UpdateAt" class="control-label"></label>
         <input asp-for="UpdateAt" class="form-control" readonly />
     </div> *@
-    <div class="form-group">
-        <label asp-for="ArtistId" class="control-label"></label>
-        <select asp-for="ArtistId" class="form-control">
-            @foreach (Artist artist in artists)
-            {
-                <option value="@artist.ArtistId">@artist.ArtistName</option>
-            }
-        </select>
-        <span asp-validation-for="ArtistId" class="text-danger"></span>
-    </div>
+    @if (role == "Admin")
+    {
+        <div class="form-group">
+            <label asp-for="ArtistId" class="control-label"></label>
+            <select asp-for="ArtistId" class="form-control">
+                @foreach (Artist artist in artists)
+                {
+                    <option value="@artist.ArtistId">@artist.ArtistName</option>
+                }
+            </select>
+            <span asp-validation-for="ArtistId" class="text-danger"></span>
+        </div>
+    }
     <div class="form-group">
         <label asp-for="ExhibitionId" class="control-label"></label>
         <select asp-for="ExhibitionId" class="form-control">
